Fix styles for mobile icons in featured proposals
We were only adding styles for facebook and twitter, meaning telegram
and whatsapp looked out of place.

--- a/app/assets/stylesheets/participation.scss
+++ b/app/assets/stylesheets/participation.scss
@@ -1114,8 +1114,7 @@
 
   .share-supported {
 
-    .ssb-twitter,
-    .ssb-facebook {
+    .social-share-button .ssb-icon {
       background: none;
       color: $text;
       height: rem-calc(33);
